--- a/Editor/Test/unit1.lfm
+++ b/Editor/Test/unit1.lfm
@@ -7,6 +7,7 @@ object Form1: TForm1
   ClientHeight = 628
   ClientWidth = 1143
   Menu = MainMenu1
+  OnCreate = FormCreate
   LCLVersion = '1.7'
   inline EditorFrame1: TEditorFrame
     Height = 628
