--- a/Editor/editor.lfm
+++ b/Editor/editor.lfm
@@ -1,21 +1,20 @@
 object EditorFrame: TEditorFrame
   Left = 0
-  Height = 862
+  Height = 422
   Top = 0
-  Width = 1069
-  ClientHeight = 862
-  ClientWidth = 1069
+  Width = 1001
+  ClientHeight = 422
+  ClientWidth = 1001
   Font.Quality = fqProof
-  LCLVersion = '1.7'
   ParentFont = False
   TabOrder = 0
-  DesignLeft = 1027
-  DesignTop = 202
+  DesignLeft = 187
+  DesignTop = 127
   inline CodeEditor: TSynEdit
     Left = 0
-    Height = 862
+    Height = 422
     Top = 0
-    Width = 1069
+    Width = 1001
     Align = alClient
     Font.Height = -22
     Font.Name = 'Courier New'
@@ -472,6 +471,7 @@ object EditorFrame: TEditorFrame
     MouseLinkColor.Foreground = clBlue
     LineHighlightColor.Background = clNone
     LineHighlightColor.Foreground = clNone
+    OnChange = CodeEditorChange
     inline SynLeftGutterPartList1: TSynGutterPartList
       object SynGutterMarks1: TSynGutterMarks
         Width = 24
