--- a/Editor/Test/unit1.lfm
+++ b/Editor/Test/unit1.lfm
@@ -1,8 +1,9 @@
 object Form1: TForm1
   Left = 286
-  Height = 481
+  Height = 451
   Top = 137
   Width = 807
+  ActiveControl = PageControl1
   Caption = 'AAL Editor'
   ClientHeight = 451
   ClientWidth = 807
@@ -10,9 +11,10 @@ object Form1: TForm1
   OnClose = FormClose
   OnCreate = FormCreate
   LCLVersion = '1.7'
+  Visible = False
   object PageControl1: TPageControl
     Left = 0
-    Height = 451
+    Height = 431
     Top = 0
     Width = 807
     Align = alClient
