--- a/Editor/editor.lfm
+++ b/Editor/editor.lfm
@@ -1,9 +1,9 @@
 object EditorFrame: TEditorFrame
   Left = 0
-  Height = 422
+  Height = 434
   Top = 0
   Width = 811
-  ClientHeight = 422
+  ClientHeight = 434
   ClientWidth = 811
   Font.Quality = fqProof
   ParentFont = False
@@ -12,7 +12,7 @@ object EditorFrame: TEditorFrame
   DesignTop = 202
   inline CodeEditor: TSynEdit
     Left = 0
-    Height = 422
+    Height = 400
     Top = 0
     Width = 811
     Align = alClient
@@ -507,6 +507,79 @@ object EditorFrame: TEditorFrame
         MouseActionsExpanded = <>
         MouseActionsCollapsed = <>
       end
+    end
+  end
+  object SearchBar: TPanel
+    Left = 0
+    Height = 34
+    Top = 400
+    Width = 811
+    Align = alBottom
+    BevelOuter = bvNone
+    ClientHeight = 34
+    ClientWidth = 811
+    TabOrder = 1
+    Visible = False
+    object Label1: TLabel
+      Left = 0
+      Height = 25
+      Top = 4
+      Width = 51
+      Caption = 'Suche:'
+      ParentColor = False
+    end
+    object SearchEdit: TEdit
+      Left = 56
+      Height = 33
+      Top = 0
+      Width = 152
+      OnKeyUp = SearchEditKeyUp
+      TabOrder = 0
+    end
+    object SearchButton: TButton
+      Left = 208
+      Height = 33
+      Top = 0
+      Width = 67
+      Caption = 'Suchen'
+      OnClick = SearchButtonClick
+      TabOrder = 1
+    end
+    object ReplaceEdit: TEdit
+      Left = 288
+      Height = 33
+      Top = 0
+      Width = 152
+      OnKeyUp = ReplaceEditKeyUp
+      TabOrder = 2
+    end
+    object ReplaceButton: TButton
+      Left = 440
+      Height = 33
+      Top = 0
+      Width = 83
+      Caption = 'Ersetzen'
+      OnClick = ReplaceButtonClick
+      TabOrder = 3
+    end
+    object ReplaceAllButton: TButton
+      Left = 528
+      Height = 33
+      Top = 0
+      Width = 120
+      Caption = 'Alle Ersetzen'
+      OnClick = ReplaceAllButtonClick
+      TabOrder = 4
+    end
+    object CloseSearchButton: TSpeedButton
+      Left = 776
+      Height = 34
+      Top = 0
+      Width = 35
+      Anchors = [akTop, akRight]
+      Caption = 'x'
+      Flat = True
+      OnClick = CloseSearchButtonClick
     end
   end
   object Completion: TSynCompletion
