--- a/IDE/Forms/idemainform.lfm
+++ b/IDE/Forms/idemainform.lfm
@@ -1,8 +1,10 @@
-object Form1: TForm1
-  Left = 249
-  Height = 240
-  Top = 153
-  Width = 320
-  Caption = 'Form1'
+object MainForm: TMainForm
+  Left = 232
+  Height = 299
+  Top = 137
+  Width = 475
+  Caption = 'AAL IDE'
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   LCLVersion = '1.7'
 end
